# CITest

./: .travis.yml  CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  README.md  main.cpp
src/: CMakeLists.txt  MathFunctions.cpp  main.cpp
